--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Lockheart Labworks - Lapis Marble Website Template</title>
+		<title>Lotera | Real Estate Agency Website</title>
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="/assets/images/favicon/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="/assets/images/favicon/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="/assets/images/favicon/favicon-16x16.png"
+		/>
+		<link rel="manifest" href="/site.webmanifest" />
+
 		<link rel="stylesheet" href="./style/style.css" />
 	</head>
 
@@ -877,7 +896,10 @@
 			<!-- Contact Section -->
 			<section id="contact" class="contact">
 				<div class="contact__left">
-					<h1><span>Lotera: </span> <br> Votre Maison, Notre Mission</h1>
+					<h1>
+						<span>Lotera: </span> <br />
+						Votre Maison, Notre Mission
+					</h1>
 					<p>
 						Besoin d'aide pour trouver votre nouveau chez-vous ? Des questions sur nos
 						services ou nos propriétés ? Vous souhaitez réserver une visite ? N'hésitez
@@ -891,8 +913,12 @@
 							<input type="text" placeholder="Email" />
 						</div>
 						<input type="text" placeholder="Objet" />
-						<textarea name="noname" id="noid" placeholder="Ecrivez Votre Message Ici..."></textarea>
-						<input class="submit-contact" type="submit" value="Envoyez Message">
+						<textarea
+							name="noname"
+							id="noid"
+							placeholder="Ecrivez Votre Message Ici..."
+						></textarea>
+						<input class="submit-contact" type="submit" value="Envoyez Message" />
 					</form>
 				</div>
 				<div class="contact__right">
