--- a/index.html
+++ b/index.html
@@ -967,13 +967,13 @@
 					<div class="grid-item">
 						<h3>Menu</h3>
 						<ul>
-							<li><a href="#">Accueil</a></li>
-							<li><a href="#">À Propos</a></li>
-							<li><a href="#">Services</a></li>
-							<li><a href="#">Formateurs</a></li>
-							<li><a href="#">Plans Tarifières</a></li>
-							<li><a href="#">Témoignages</a></li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="#home">Accueil</a></li>
+							<li><a href="#properties">Trouver Propriétés</a></li>
+							<li><a href="#categories">Catégories</a></li>
+							<li><a href="#about">A Propos de Lotera</a></li>
+							<li><a href="#services">Services</a></li>
+							<li><a href="#about">Informations</a></li>
+							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</div>
 					<div class="grid-item">
